--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,4 @@
 <%- include("partials/header"); -%>
     <h1>About</h1>
-    <p> <%= aboutContent %> </p>
+    <h2> <%= aboutContent %> </h2>
 <%- include("partials/footer"); -%>
