--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,6 @@
 
 <%- include("partials/header"); -%>
-    <h1>Home</h1>
-    <p> <%= startingContent %> </p>
-
-
+    <h1>Home : Welcome to my diary</h1>
   <%  posts.forEach(function(post){ %>
 
     <h1><%=post.title%></h1>
