--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header"); -%>
   
-  <h1><%=title%></h1>
-  <p><%=content%></p>
+  <h3><%=title%></h3>
+  <h4><%=content%></h4>
   <form action="/delete" method="post">
     <button type="submit" name="deleteID" value="<%=id%>" class="btn btn-danger">
         Delete Post
