--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,18 @@
+:root{
+  --fonthead :'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 html {
   min-height: 100%;
   position: relative;
 }
-h3 {
+h1,h3 {
   margin-top: 5%;
+  font-family : var(--fonthead);
 }
-h4 {
-  font-weight: lighter;
+
+h4{
+  font-weight:300;
+  font-family: var(--fonthead);
 }
 .container-fluid {
     padding-top: 70px;
